Advance Trees
Completed remaining exercises.